syntax = "proto3";

option go_package = "./pb";

message FlagSubmit {
  string Key = 1;
  string DisplayName = 2;
  repeated string AudienceIDs = 3;
}

message AudSubmit {
  string Key = 1;
  string DisplayName = 2;
  string Combine = 3;
  repeated CondSubmit Conditions = 4;
}

message AttrSubmit {
	string Key = 1;
  string DisplayName = 2;
  string Type = 3;
}

message CondSubmit {
  int32 AttributeID = 1;
  string Operator = 2;
  bool Negate = 3;
  string Vals = 4;
}

message FlagUpdate {
  FlagSubmit Updates = 1;
  uint32 ID = 2;
}

message FlagToggle {
  int32 ID = 1;
  bool Status = 2;
}

message AudUpdate {
  AudSubmit Updates = 1;
  uint32 ID = 2;
}

message Empty {}